--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animejs": "^2.0.2",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "materialize-css": "^0.100.2",
     "morgan": "^1.8.2",
     "pg": "^6.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-materialize": "^1.0.13",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.6.0",
