Webpack build and server start on npm start

--- a/package.json
+++ b/package.json
@@ -4,9 +4,22 @@
   "description": "personal site",
   "main": "client/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
-    "start-dev": "webpack -w &amp; nodemon server"
+    "dev": "node dev",
+    "validate": "check-node-version --node '>= 7.0.0'",
+    "setup": "./bin/setup",
+    "prep": "npm run validate && npm run setup",
+    "postinstall": "npm run prep && npm run build",
+    "build": "webpack",
+    "build-watch": "npm run build -- -w",
+    "build-dev": "cross-env NODE_ENV=development npm run build-watch",
+    "build-branch": "bin/build-branch.sh",
+    "start": "webpack -w & nodemon server/index.js --watch server --watch index.js --watch package.json",
+    "start-watch": "nodemon server/index.js --watch server --watch index.js --watch package.json",
+    "start-dev": "cross-env NODE_ENV=development npm run start-watch",
+    "test": "mocha --compilers js:babel-register --require babel-polyfill --watch-extensions js,jsx app/**/*.test.js app/**/*.test.jsx server/**/*.test.js db/**/*.test.js",
+    "test-watch": "npm run test -- --watch --reporter=min",
+    "lint": "esw . --ignore-path .gitignore --ext '.js,.jsx'",
+    "lint-watch": "npm run lint -- -w"
   },
   "author": "",
   "license": "ISC",
